<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:clipToPadding="false" android:fillViewport="false"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            tools:layout_editor_absoluteY="0dp" app:layout_constraintHorizontal_bias="1.0"
            tools:ignore="MissingConstraints">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="top|left|fill_vertical">
            <TextView
                    android:text="@string/reg_portal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="28dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="5dp" android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/usernamePrompt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView5" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtEmail" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    android:hint="@string/emailHint"/>
            <TextView
                    android:text="@string/namePrompt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtName" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/txtRepass"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/nameHint"/>
            <TextView
                    android:text="@string/passwordPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:id="@+id/textView8" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtPhone"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtPass"
                    app:layout_constraintStart_toStartOf="@+id/textView5" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" android:hint="@string/enterPassword"
                    android:password="true" android:fontFamily="sans-serif"/>
            <TextView
                    android:text="@string/reenterPasswordPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtPass"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    android:id="@+id/txtRepass" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" android:hint="@string/reenterPasswordhint"
                    android:password="true" android:fontFamily="sans-serif"/>
            <TextView
                    android:text="@string/phoneNumber"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:layout_height="match_parent" android:id="@+id/lblPhoneNumber"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtRepass"/>
                    tools:text="@string/phoneNumber"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtPhone"
                    android:hint="@string/phoneHint"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
            <Button
                    android:text="Sign Up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSignup"
                    android:onClick="btnSignupClick" tools:layout_editor_absoluteY="523dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp" android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>