<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".LoginActivity">

    <!-- Login progress -->

    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:orientation="vertical" android:gravity="bottom|right">

        <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" android:fontFamily="sans-serif"/>
        <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" android:textSize="16sp"/>
        <Button
                android:id="@+id/btnSignup"
                style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:text="@string/signup"
                android:textAppearance="@android:style/TextAppearance.Material.Menu" android:textSize="14sp"
                android:onClick="btnSignupClick"/>

    </LinearLayout>
</LinearLayout>