<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PromptServerIP">

    <EditText
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" android:id="@+id/txtServerIP" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="124dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.02" android:hint="@string/ipHint"/>
    <TextView
            android:text="Server IP:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/txtServerIP"
            app:layout_constraintStart_toStartOf="@+id/txtServerIP" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChangeServerIP" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@android:style/Widget.Button" android:onClick="btnchangeServerIP" android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/txtServerIP"/>
    <TextView
            android:text="@string/currentServerIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="133dp"
            android:layout_height="18dp"
            android:id="@+id/lblServerIP"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.25"/>
</android.support.constraint.ConstraintLayout>